# gba-sprite-engine

./: CMakeLists.txt  timespent.csv  timespent_Lukas.csv
Test1/: CMakeLists.txt
Test1/src/: MyScene.cpp  MyScene.h  bg_test.h  main.cpp  smile.h  track1.h
demos/demo1-basicfeatures/src/: flying_stuff_scene.cpp
demos/demo3-foodthrowing/: CMakeLists.txt
engine/: CMakeLists.txt
